# Educ-Ai-te

./: README.md
educaite/: README.md  pyproject.toml  report.md
educaite/knowledge/: user_preference.txt
educaite/src/educaite/: crew.py  main.py
educaite/src/educaite/config/: agents.yaml  tasks.yaml
