[project]
name = "educaite"
version = "0.1.0"
description = "educaite using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.1"
]

[project.scripts]
educaite = "educaite.main:run"
run_crew = "educaite.main:run"
train = "educaite.main:train"
replay = "educaite.main:replay"
test = "educaite.main:test"
run_with_trigger = "educaite.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
